<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/user_profile"
        android:id="@+id/home_fragment_profile"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:icon="@drawable/user_profile_icon"/>
    <item
        android:title="@string/cart"
        android:id="@+id/home_fragment_cart"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:icon="@drawable/cart_icon"/>
    <item
        android:title="@string/search"
        android:id="@+id/home_fragment_search"
        android:icon="@drawable/search_product_icon"
        android:orderInCategory="1"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

</menu>