<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    tools:context=".activities.SignUpActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="140dp"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/transparent_bg"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_a_user"
                android:textSize="@dimen/button_text_size" />

            <EditText
                android:id="@+id/buyer_sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/buyer_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/buyer_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/terms_conditions_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/dark_blush_pink"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/new_buyer_sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/sign_up_back_btn"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>