<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register_bg"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        
<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:id="@+id/loading_animation"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:lottie_rawRes="@raw/loading_anim"-->
<!--            app:lottie_autoPlay="true"/>-->

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/blush_pink"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Please Wait...."
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/progress_bar"/>
    </RelativeLayout>

    <Button
        android:id="@+id/exit_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/exit_app"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="28dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="20dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/transparent_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/buyer_login_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_edit_text"
                android:paddingLeft="8dp"
                android:textColorHint="@color/grey"
                android:textColor="@color/grey"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/buyer_login_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:paddingLeft="8dp"
                android:textColorHint="@color/grey"
                android:textColor="@color/grey"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <Button
                android:id="@+id/email_log_in_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/log_in_with_email"
                android:background="@drawable/rounded_button"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="or"
                android:textSize="19sp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/google_log_in_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/google_log_in"
                android:textAlignment="viewStart"
                android:drawableLeft="@drawable/google_logo"
                android:background="@drawable/rounded_button_grey"
                android:paddingLeft="20dp"
                android:textSize="@dimen/button_text_size"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/facebook_log_in_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/facebook_log_in"
                android:drawableLeft="@drawable/facebook_logo"
                android:textAlignment="viewStart"
                android:paddingLeft="20dp"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/rounded_button_grey"
                android:textAllCaps="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    android:text="@string/no_account"/>
                <Button
                    android:id="@+id/sign_up_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:textAlignment="viewStart"
                    android:textColor="@color/dark_blush_pink"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="Sign Up"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>